--- a/mandela_effect.org
+++ b/mandela_effect.org
@@ -472,3 +472,17 @@ https://baike.baidu.com/item/%E7%81%AB%E7%83%A7%E5%9C%86%E6%98%8E%E5%9B%AD/16077
 
 螃蟹的脚的数量：
 6-》8
+
+
+
+
+爱憎分明:
+ai zeng（四声）->ai zeng(一声）
+
+
+
+兵来将挡,水来土囤->兵来将挡,水来土掩
+
+
+
+不亦乐(yue)乎->不亦乐(le)乎
