--- a/mandela_effect.org
+++ b/mandela_effect.org
@@ -497,3 +497,13 @@ ai zeng（四声）->ai zeng(一声）
 
 
 不亦乐(yue)乎->不亦乐(le)乎
+
+
+
+河南省的省会:
+洛阳->郑州
+
+
+致远舰先手:
+撞击吉野号->撞击日本联合舰队的本队
+http://military.china.com/history4/62/20161230/30129561_all.html
