--- a/today.org
+++ b/today.org
@@ -1,58 +1,46 @@
 * 今日计划
-
-
-** TODO add load asset(v)
-*** TODO learn
-http://what-when-how.com/Tutorial/topic-4863q9vm8/HTML5-Game-Development-Insights-20.html
-
-http://what-when-how.com/Tutorial/topic-4863q9vm8/HTML5-Game-Development-Insights-333.html
-
-
-*** TODO support obj model
-
-*** TODO do
-http://bitsquid.blogspot.ch/2014/10/building-data-oriented-entity-system_10.html
-
-*** TODO add AssetDatabase to support aync load asset
-(move out to be a project in wonder group?)
+** TODO event 
+*** pc event
 
 
 
-*** TODO support share the same texture
-different model with the texture of the same id should share the same texture!?
-
-
-
-*** TODO support hot loading
-https://blog.molecular-matters.com/2012/01/31/a-content-pipeline-for-fast-iteration-times/
-https://www.youtube.com/watch?v=BQPpZkRk6y4
-
-
-*** TODO use backgroup task api
-https://developer.mozilla.org/en-US/docs/Web/API/Background_Tasks_API
-
-
-*** TODO support stream load?
-https://github.com/AVGP/streaming-webgl-demo
-https://github.com/whatwg/streams
-https://streams.spec.whatwg.org/
+*** mobile event
 
 
 
 
-** TODO generate .wd+.bin from scene(engine do this)
+** TODO camera
 
-////merge loaded .wd files
-(no need to merge!  )
-
+////*** ortho camera
 
 
-no need to generate textures(include in asset folder)
+*** arcball camera controller
 
 
 
 
-** TODO support load .wd string
+
+
+
+
+*** fly camera controller
+
+
+** TODO picking
+
+
+
+
+
+
+
+** TODO mobile
+*** TODO Multiresolution adaptation
+
+
+*** TODO add mobile render pipeline
+
+
 
 
 
@@ -66,986 +54,24 @@ no need to generate textures(include in asset folder)
 
 
 
+
+
+
+
+
 * 完成事项
 
 
-** DONE update editor version
-CLOSED: [2018-05-22 Tue 16:54]
 
+** TODO event 
+*** pc event
 
 
-** DONE add load asset(v)
-CLOSED: [2018-06-12 Tue 20:12]
-*** DONE learn
-CLOSED: [2018-05-23 Wed 11:49]
-http://what-when-how.com/Tutorial/topic-4863q9vm8/HTML5-Game-Development-Insights-20.html
 
-http://what-when-how.com/Tutorial/topic-4863q9vm8/HTML5-Game-Development-Insights-333.html
+*** mobile event
 
 
 
-*** TODO minimum demo
-
-
-
-**** DONE define wd format
-CLOSED: [2018-05-25 Fri 14:50]
-
-
-
-
-
-////**** TODO convert obj to .wd
-**** TODO convert gltf to .wd
-
-
-check no multi primitives
-
-
-
-if index === -1, not add 
-
-
-
-
-
-not support TEXCOORD_1
-
-////not support multi primitives per mesh
-support multi primitives per mesh
-
-
-
-not support alpha
-
-
-indices must exist
-
-
-
-
-
-support embeded
-
-Images:
-only support "a URI to an external file in one of the supported images formats"
-    uri must exist
-
-
-
-
-Buffers:
-uri must exist
-
-
-
-Materials:
-not support alpha
-support double side
-
-////support extensions->material_common(with only diffuse,specular, shininess data)
-
-use base color+	metallic value+...:
-use base color as diffuse color
-use metallic value as specular color
-use roughness value as shininess
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-***** TODO converter with .obj,.mtl, image files data
-result is string + .bin string?
-
-
-////***** TODO node tool: converter with load obj model
-result is .wd + .bin file
-
-
-***** TODO optimize: result should be organized as batch data
-
-
-***** TODO add
-
-add default material:
-Default Material
-The default material, used when a mesh does not specify a material, is defined to be a material with no properties
-specified. All the default values of material apply. Note that this material does not emit light and will be black
-unless some lighting is present in the scene. 
-
-
-
-add default directional light
-
-
-
-
-
-
-
-***** DONE pass compile
-CLOSED: [2018-05-28 Mon 06:00]
-
-
-
-***** TODO pass test
-
-
-
-
-**** TODO handle wd
-
-handle byteStride?:
-				// For VEC3: itemSize is 3, elementBytes is 4, itemBytes is 12.
-				var elementBytes = TypedArray.BYTES_PER_ELEMENT;
-				var itemBytes = elementBytes * itemSize;
-
-				var array;
-
-				// The buffer is not interleaved if the stride is the item size in bytes.
-				if ( accessor.byteStride && accessor.byteStride !== itemBytes ) {
-
-
-not support interleaved!!!
-
-
-
-//commit
-
-
-
-
-
-//compute vertex normals
-
-
-
-//commit
-
-
-
-
-
-//batch set transform parent:
-set in last!
-
-
-//batch set transform data:
-not consider parent and update(set parent last, now no parent!)
-
-
-
-
-material:
-only load diffuse. specular and shininess use default one!
-
-
-
-
-
-
-***** DONE pass compile
-CLOSED: [2018-05-29 Tue 10:25]
-
-
-
-***** TODO pass test
-
-
-
-
-
-***** TODO load wd string
-
-current, total count
-
-
-////***** TODO parse wd
-
-
-
-***** TODO directly assemble wd from coverted result!
-
-
-
-
-
-***** TODO do
-http://bitsquid.blogspot.ch/2014/10/building-data-oriented-entity-system_10.html
-
-
-
-
-
-
-
-draft logic
-
-
-pass compile
-
-
-
-
-
-***** TODO test
-
-
-
-
-
-
-*** DONE pass test
-CLOSED: [2018-06-01 Fri 09:33]
-**** DONE test convert gltf
-CLOSED: [2018-05-31 Thu 10:50]
-
-
-fix multi primitives:
-//pass compile
-
-convert geometrys: not handle multi primitives
-convert geometry gameObjectIndices: not handle multi primitives
-
-pass test
-
-
-
-
-
-
-test camera
-
-
-
-
-**** DONE test assemble:
-CLOSED: [2018-05-31 Thu 20:06]
-
-
-test scene
-
-
-
-
-**** DONE test compute normals
-CLOSED: [2018-06-01 Fri 09:33]
-
-
-*** DONE upgrade reason, bs-platform
-CLOSED: [2018-06-01 Fri 17:35]
-
-**** DONE remove js boolean, use reason boolean instead; remove Js.to_bool, Js.Boolean.to_js_boolean
-CLOSED: [2018-06-01 Fri 17:35]
-
-
-
-*** DONE optimize: benchmark batch create vs create one by one
-CLOSED: [2018-06-03 Sun 12:17]
-
-result:
-"batch create" is faster the "create one by one"
-
-
-*** DONE optimize
-CLOSED: [2018-06-04 Mon 15:42]
-
-now "compute vertex normals" when get normals(when render)
-
-
-*** DONE refactor
-CLOSED: [2018-06-05 Tue 09:12]
-//move DirectorSystem to api/DirectorAPI
-
-
-//duplicate
-
-//split
-
-
-
-
-
-
-*** DONE add more assemble logic
-CLOSED: [2018-06-05 Tue 22:14]
-
-//add camera
-
-//add material
-
-//add meshRenderer
-
-
-////pass compile
-
-
-////test
-
-
-
-
-
-*** DONE pass run test
-CLOSED: [2018-06-08 Fri 15:48]
-
-
-
-//box textured:
-
-//add generateMipmap
-
-
-
-
-**** TODO duck
-
-***** DONE transform support rotate, scale
-CLOSED: [2018-06-06 Wed 18:29]
-
-
-
-
-////***** TODO transform support lookAt
-
-
-
-
-***** DONE test 
-CLOSED: [2018-06-06 Wed 18:29]
-test transform
-
-
-test normal matrix
-
-
-
-redo-undo
-
-
-clone
-
-
-
-***** DONE fix getRotation bug
-CLOSED: [2018-06-06 Wed 20:02]
-
-
-
-
-
-
-
-***** DONE asset->transform
-CLOSED: [2018-06-06 Wed 18:29]
-
-
-**** DONE fix texture->flipY
-CLOSED: [2018-06-07 Thu 17:35]
-basicSource
-arrayBufferViewSource
-
-test:
-no worker
-
-worker
-
-
-
-
-
-set not filpY on gltf texture
-
-
-
-
-
-
-
-
-//fix convert bug
-
-
-
-**** DONE fix canvas bug
-CLOSED: [2018-06-07 Thu 20:44]
-
-
-
-////***** TODO fix transform bug
-render should set rotation,scale data
-
-
-
-
-**** DONE fix camera  bug
-CLOSED: [2018-06-07 Thu 20:44]
-
-
-////**** TODO transform
-
-add translate, translateLocal, rotate, rotateLocal, lookAt, ...
-
-
-**** DONE cameras
-CLOSED: [2018-06-08 Fri 10:19]
-
-add:
-default scene
-
-default material
-
-
-**** DONE truck
-CLOSED: [2018-06-07 Thu 10:39]
-
-
-
-**** DONE test more models
-CLOSED: [2018-06-08 Fri 12:00]
-
-
-
-////**** TODO VC
-
-
-
-
-////***** TODO optimize multi primitives
-if use the same mesh(multi primitives), share the same node!
-
-
-
-
-**** TODO test worker
-
-
-
-
-
-*** DONE fix
-CLOSED: [2018-06-11 Mon 20:26]
-
-//To achieve correct rendering, WebGL runtimes must disable such conversions by setting UNPACK_COLORSPACE_CONVERSION_WEBGL
-flag to NONE:
-gl.pixelStorei(gl.UNPACK_COLORSPACE_CONVERSION_WEBGL, gl.NONE);
-
-
-
-
-
-
-////texture:
-filter not allow use mipmap(contract check)
-(
-Mipmapping Implementation Note: When a sampler's minification filter (minFilter) uses mipmapping
-(NEAREST_MIPMAP_NEAREST, NEAREST_MIPMAP_LINEAR, LINEAR_MIPMAP_NEAREST, or LINEAR_MIPMAP_LINEAR), any texture referencing
-the sampler needs to have mipmaps, e.g., by calling GL's generateMipmap() function. 
-)
-
-
-
-
-////*** TODO customGeometry add smooth
-////compute flat/vertex normals?
-////if none, not compute normals
-
-
-
-
-
-
-*** DONE add name
-CLOSED: [2018-06-12 Tue 19:44]
-node, mesh, material(light material), texture and image(consider texture asset) add name
-
-.wd add name
-
-
-
-
-
-//gameObject add name
-
-
-//asset:
-node
-mesh
-multi primitives
-
-assemble
-
-
-
-
-
-
-material, texture add name
-
-
-
-asset:
-material
-default material
-
-texture:
-    image name
-
-
-
-*** DONE refactor
-CLOSED: [2018-06-12 Tue 20:12]
-
-
-
-
-////*** TODO support share the same texture
-different model with the texture of the same id should share the same texture!?
-
-
-
-
-////*** TODO support hot loading
-https://blog.molecular-matters.com/2012/01/31/a-content-pipeline-for-fast-iteration-times/
-https://www.youtube.com/watch?v=BQPpZkRk6y4
-
-
-
-
-** DONE optimize: show model
-CLOSED: [2018-06-12 Tue 21:35]
-
-
-** DONE optimize: benchmark batch create vs create one by one
-CLOSED: [2018-06-12 Tue 21:35]
-
-
-
-** DONE generate .wd from scene(engine do this)
-CLOSED: [2018-06-19 Tue 09:47]
-
-////merge loaded .wd files
-(no need to merge!  )
-
-
-
-////no need to generate textures(include in asset folder)
-
-
-
-*** DONE generate embeded .wd
-CLOSED: [2018-06-19 Tue 09:47]
-
-**** DONE geometry:
-CLOSED: [2018-06-17 Sun 21:25]
-//finish draft
-
-
-//pass compile
-
-
-//commit:
-rename GameObjectAPI->unsafeGetGameObjectCustomGeometryComponent to unsafeGetGameObjectGeometryComponent
-
-
-
-//pass first test
-
-
-
-
-meshes:
-
-////boxGeometry + customGeometry
-
-
-
-
-contract check:
-nodes,meshes, ... shouldn't has slot!
-
-
-
-
-test:
-//disposed cases
-
-
-box geometry
-
-custom geometry
-
-
-//shared geometry:
-gltf add node->extension->material
-fix generate
-
-
-
-
-
-test buffer data(vertices, ... data)
-
-
-primitives->attributes can has no TEXCOORD_0
-
-
-
-
-refactor
-
-
-
-**** DONE benchmark assemble
-CLOSED: [2018-06-17 Sun 21:29]
-
-
-
-**** DONE material
-CLOSED: [2018-06-18 Mon 20:50]
-
-material data
-
-
-texture 
-
-image:
-convert to base 64
-
-
-
-
-
-
-***** DONE u,i test
-CLOSED: [2018-06-18 Mon 18:41]
-
-shared material
-
-test basic material
-
-
-test TEXCOORD geometry data
-
-
-same texture
-
-same sampler
-
-same source
-
-
-
-
-***** DONE run test
-CLOSED: [2018-06-18 Mon 20:50]
-
-
-flipY???:
-texture add extension data?
-
-
-
-
-
-test gltf
-
-
-test sceneGameObject
-
-
-fix bug
-
-
-//optimize: judge type
-
-
-**** DONE refactor material
-CLOSED: [2018-06-19 Tue 05:47]
-
-
-
-**** DONE refactor test
-CLOSED: [2018-06-19 Tue 05:47]
-
-asset->test to be integration test
-
-split?
-
-
-**** DONE camera
-CLOSED: [2018-06-19 Tue 09:47]
-
-
-
-
-
-***** DONE run test
-CLOSED: [2018-06-19 Tue 09:47]
-//test gltf
-
-
-//test gameObject
-
-
-
-
-** DONE run test
-CLOSED: [2018-06-19 Tue 11:26]
-
-//camera
-
-//vc
-
-
-
-** DONE optimize generate wd
-CLOSED: [2018-06-19 Tue 12:14]
-
-
-
-
-
-
-
-** DONE nodejs tool
-CLOSED: [2018-06-19 Tue 21:43]
-
-//load wd file
-
-
-
-//create wd file:
-writeWD
-
-
-** DONE fix: set new created texture
-CLOSED: [2018-06-21 Thu 06:31]
-
-
-////diffuse color + diffuse map
-
-
-
-diffuse_map:
-color + map
-
-
-no_diffuse_map:
-color
-
-
-
-basic material:color+map
-
-
-
-
-
-
-*** TODO editor
-publish wonder.js npm!
-
-
-need judge geometry has texCoord?
-show info modal
-
-
-
-** DONE api add functions
-CLOSED: [2018-06-21 Thu 06:33]
-////BasicSourceTextureAPI:
-add initTexture
-
-
-BasicMaterialAPI:
-rename hasLightMaterialMap to hasBasicMaterialMap
-
-
-
-** DONE add light
-CLOSED: [2018-06-22 Fri 09:35]
-
-
-//convert
-
-
-
-//change ambient to be scene data:
-
-
-//test:
-    add scene-> ambient light test
-
-
-
-
-
-//assemble
-
-
-
-//generate
-
-
-
-
-//u,i test
-
-
-
-//run test
-
-
-
-** DONE publish wonder-log
-CLOSED: [2018-06-22 Fri 09:35]
-//update version
-
-
-//update wonder.js
-
-//update editor
-
-
-** DONE render test
-CLOSED: [2018-06-22 Fri 18:08]
-
-
-pass current tests
-
-
-
-
-add asset cases
-
-
-** DONE pf test
-CLOSED: [2018-06-22 Fri 19:49]
-
-
-//pass current tests
-
-
-
-
-//add asset cases:
-convert
-
-assemble
-
-generate wd
-
-
-
-
-
-
-
-
-** DONE benchmark
-CLOSED: [2018-06-22 Fri 20:09]
-
-give report
-
-
-
-
-** TODO advanced asset
-*** TODO support glb
-
-**** TODO convert gltf glb to wd
-
-
-
-**** TODO generate wd glb from scene
-
-
-
-**** TODO load wd glb
-
-
-*** TODO support gltf extensions
-https://github.com/KhronosGroup/glTF/tree/master/extensions
-
-
-
-*** TODO convert .wd to .gltf
-**** TODO fix share material but not share geometry!
-(node->extension->material)
-
-
-*** TODO add more data in .wd
-add:
-clone
-instance
-...
-
-
-
-**** TODO material add side
-
-
-
-
-*** TODO optimize generate wd
-when generate wd->generate gltf, add extended data:
-geometry type(box, customGeometry)
-
-
-not add box geometry data to buffer!
-
-
-
-
-
-*** TODO add AssetDatabase to support aync load asset
-(move out to be a project in wonder group?)
-
-*** TODO use backgroup task api
-https://developer.mozilla.org/en-US/docs/Web/API/Background_Tasks_API
-
-
-
-
-
-
-
-
-
-
-
-** DONE finish all TODO
-CLOSED: [2018-06-22 Fri 20:15]
-
-
-
-** DONE pass coverage
-CLOSED: [2018-06-22 Fri 20:32]
-
-
-
-** DONE pass code climate
-CLOSED: [2018-06-22 Fri 22:37]
-
-
-
-** DONE pass ci
-CLOSED: [2018-06-22 Fri 22:51]
-
-
-
-** DONE publish
-CLOSED: [2018-06-22 Fri 23:11]
 
 
 
@@ -1054,34 +80,9 @@ CLOSED: [2018-06-22 Fri 23:11]
 * 编辑器Editor
 
 
-** TODO editor fix name
-(use engine name api instead of editor state->name)
-
-
-
-** TODO use added api
-BasicSourceTextureAPI:
-add initTexture
-
-
-BasicMaterialAPI:
-rename hasLightMaterialMap to hasBasicMaterialMap
 
 
 * 未解决的问题
-
-** TODO VC gltf model wrong
-the road,railway show wrong!!! why????
-
-
-(other gltf models(include cad models) show correctly!)
-
-
-
-
-
-** TODO generate wd-> 2CylinderEngine gltf model wrong
-not the same as origin gltf model!!!
 
 
 
@@ -1102,15 +103,6 @@ not the same as origin gltf model!!!
 
 
 * TODO 未来7日计划
-
-
-
-
-
-
-
-
-
 
 
 
